<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ship_add"
        android:textSize="50px"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/product_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/product"/>
    <EditText
        android:id="@+id/longitude_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/longitude"/>
    <EditText
        android:id="@+id/latitude_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/latitude"/>
    <EditText
        android:id="@+id/elevation_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:hint="@string/elevation"/>
    <Button
        android:id="@+id/date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/add_confirm"/>
</LinearLayout>