
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView
            android:id="@+id/product_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_select"
            android:textSize="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_margin="10dp"/>
        <Spinner
            android:id="@+id/date_update_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp">
        </Spinner>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="25dp"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/longitude_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="numberSigned|numberDecimal"
                android:textSize="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="25dp"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/latitude_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:layout_weight="3"
                android:textSize="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elevation"
                android:textSize="25dp"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/elevation_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="4"
                android:textSize="25dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/confirm_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_confirm"
            android:layout_margin="10dp"/>
    </LinearLayout>